# econ-server-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
src/econ_server_sdk_briandidthat/: __init__.py  api.py  models.py
tests/: conf.py  conftest.py
tests/unit/: test_crypto_api.py  test_fred_api.py  test_models.py  test_stock_api.py
