[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econ_server_sdk_briandidthat"
version = "0.0.2"
authors = [
  { name="briandidthat" }
]
description = "Sdk to simplify fetching economic data using the econ-server project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/econ_server_sdk_briandidthat"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://github.com/briandidthat/econ-server-sdk"
Issues = "https://github.com/briandidthat/econ-server-sdk/issues"